<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/svResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <LinearLayout
                android:id="@+id/llResultDeatils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAdvTimeLabel"
                    style="@style/body_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/adventure_time_label" />

                <TextView
                    android:id="@+id/tvAdvTime"
                    style="@style/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234시간 5분"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tvAdvDistanceLabel"
                    style="@style/body_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/adventure_distance_label" />

                <TextView
                    android:id="@+id/tvAdvDistance"
                    style="@style/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234 km"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/tvTotalStepsLabel"
                    style="@style/body_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/total_steps_label" />

                <LinearLayout
                    android:id="@+id/llStepsAndCalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTotalSteps"
                        style="@style/head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1,234,567 걸음"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/tvCalories"
                        style="@style/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="23,254 kcal" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clQuestResultTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <TextView
                        android:id="@+id/tvQuestKeyword"
                        style="@style/head"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[퀘스트 키워드]"
                        android:textSize="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="해결 인원 54%"
                        android:textSize="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:weightSum="4">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvResult1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/ivResult1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background"
                            tools:srcCompat="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvResult2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/ivResult2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/hikeimg" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvResult3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/ivResult3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background"
                            tools:srcCompat="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvResult4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="5dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:id="@+id/ivResult4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_launcher_background"
                            tools:srcCompat="@tools:sample/avatars" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>